--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -19,9 +19,7 @@ jobs:
         python-version: '3.x'
     - name: Install dependencies
       run: |
-        curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
-        source $HOME/.poetry/env
-        pip install poetry-dynamic-versioning
+        pip3 install poetry-dynamic-versioning poetry
     - name: Build and publish
       run: |
         poetry publish -u ${{ secrets.PYPI_USERNAME }} -p ${{ secrets.PYPI_PASSWORD }}
