--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,14 @@ description = "The workflow package for MSI detection in Python"
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.7.1"
 xgboost = "1.3.3"
+pysam = "0.15.2"
+regex = "2020.11.13"
+pandas = "1.2.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "3.4"
+pytest = "^5.2.0"
 
 [tool.poetry-dynamic-versioning]
 enable = true
