--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,17 @@ cov.xml
 junit.xml
 
 _version.py
+*.swp
+package-lock.json
+__pycache__
+.pytest_cache
+.env
+.venv
+*.egg-info
 
+# CDK asset staging directory
+.cdk.staging
+cdk.out
 
 ### OSX ###
 *.DS_Store
