--- a/cdk/requirements.txt
+++ b/cdk/requirements.txt
@@ -1,2 +1,6 @@
-aws-cdk.core
-aws-cdk.pipelines
+aws-cdk.core==1.95.0
+aws-cdk.aws-s3==1.95.0
+aws-cdk.aws-iam==1.95.0
+aws-cdk.aws-codebuild==1.95.0
+aws-cdk.aws-codepipeline==1.95.0
+aws-cdk.aws-codepipeline-actions==1.95.0
