--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ xgboost = "1.3.3"
 pysam = "0.15.2"
 regex = "2020.11.13"
 pandas = "1.2.0"
+numpy = "1.20.3"
+matplotlib = "3.4.2"
+shap = "0.39.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2.0"
