--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,6 @@ style = "semver"
 [build-system]
 requires = ["poetry-core==1.0.0", "poetry-dynamic-versioning"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+clin-msi = 'clin_msi.__main__:main'
